--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,18 +11,17 @@ jobs:
   build:
     name: Build
     runs-on: self-hosted
-    timeout-minutes: 5
+    timeout-minutes: 10
     steps:
+
+    - name: Check out code into the Go module directory
+      uses: actions/checkout@v3.5.2
 
     - name: Set up Go
       uses: actions/setup-go@v4.0.1
       with:
         go-version-file: 'go.mod'
-        cache: true
       id: go
-
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v3.5.2
 
     - name: Get dependencies
       run: |
@@ -44,6 +43,11 @@ jobs:
       AZURE_RG: ${{ secrets.ARM_RESOURCE_GROUP }}
       AZURE_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
       AZURE_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+      ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+      ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+      ARM_RG: ${{ secrets.ARM_RESOURCE_GROUP }}
+      ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+      ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
       TF_VAR_AZURE_RG: ${{ vars.TF_VAR_AZURE_RG }}
       TF_VAR_AZURE_SUBNET_ID: ${{ vars.TF_VAR_AZURE_SUBNET_ID }}
       TF_VAR_AZURE_VNET_ID: ${{ vars.TF_VAR_AZURE_VNET_ID }}
@@ -54,37 +58,33 @@ jobs:
       matrix:
         terraform:
           # add other versions to support
-          - '1.1.*'
-          - '1.2.*'
-          - '1.3.*'
           - '1.4.*'
 
     steps:
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v3.5.2
+
       - name: Set up Go
         uses: actions/setup-go@v4.0.1
         with:
           go-version-file: 'go.mod'
-          cache: true
         id: go
+      
+      - name: Get dependencies
+        run: |
+          go mod download
 
       - uses: hashicorp/setup-terraform@v1
         with:
           terraform_version: ${{ matrix.terraform }}
           terraform_wrapper: false
 
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@v3.5.2
-
-      - name: Get dependencies
-        run: |
-          go mod download
-
       - name: Make YBA Terraform provider installation Directory
-        run: mkdir -p ./acctest/azure/terraform.d/plugins/terraform.yugabyte.com/platform/yugabyte-platform/0.1.0/linux_amd64
+        run: mkdir -p ./acctest/azure/terraform.d/plugins/terraform.yugabyte.com/platform/yba/0.1.0/linux_amd64
 
       - name: Install
         run: |
-          go build -o ./acctest/azure/terraform.d/plugins/terraform.yugabyte.com/platform/yugabyte-platform/0.1.0/linux_amd64
+          go build -o ./acctest/azure/terraform.d/plugins/terraform.yugabyte.com/platform/yba/0.1.0/linux_amd64
 
       # use the modules to bring up platform instance for acceptance tests
       - name: Terraform Init
@@ -140,37 +140,33 @@ jobs:
       matrix:
         terraform:
           # add other versions to support
-          - '1.1.*'
-          - '1.2.*'
-          - '1.3.*'
           - '1.4.*'
 
     steps:
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v3.5.2
+      
       - name: Set up Go
         uses: actions/setup-go@v4.0.1
         with:
           go-version-file: 'go.mod'
-          cache: true
         id: go
+      
+      - name: Get dependencies
+        run: |
+          go mod download
 
       - uses: hashicorp/setup-terraform@v1
         with:
           terraform_version: ${{ matrix.terraform }}
           terraform_wrapper: false
 
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@v3.5.2
-
-      - name: Get dependencies
-        run: |
-          go mod download
-
       - name: Make YBA Terraform provider installation Directory
-        run: mkdir -p ./acctest/aws/terraform.d/plugins/terraform.yugabyte.com/platform/yugabyte-platform/0.1.0/linux_amd64
+        run: mkdir -p ./acctest/aws/terraform.d/plugins/terraform.yugabyte.com/platform/yba/0.1.0/linux_amd64
 
       - name: Install
         run: |
-          go build -o ./acctest/aws/terraform.d/plugins/terraform.yugabyte.com/platform/yugabyte-platform/0.1.0/linux_amd64
+          go build -o ./acctest/aws/terraform.d/plugins/terraform.yugabyte.com/platform/yba/0.1.0/linux_amd64
 
       # use the modules to bring up platform instance for acceptance tests
       - name: Terraform Init
@@ -226,37 +222,33 @@ jobs:
       matrix:
         terraform:
           # add other versions to support
-          - '1.1.*'
-          - '1.2.*'
-          - '1.3.*'
           - '1.4.*'
 
     steps:
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v3.5.2
+
       - name: Set up Go
         uses: actions/setup-go@v4.0.1
         with:
           go-version-file: 'go.mod'
-          cache: true
         id: go
+
+      - name: Get dependencies
+        run: |
+          go mod download
 
       - uses: hashicorp/setup-terraform@v1
         with:
           terraform_version: ${{ matrix.terraform }}
           terraform_wrapper: false
 
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@v3.5.2
-
-      - name: Get dependencies
-        run: |
-          go mod download
-
       - name: Make YBA Terraform provider installation Directory
-        run: mkdir -p ./acctest/gcp/terraform.d/plugins/terraform.yugabyte.com/platform/yugabyte-platform/0.1.0/linux_amd64
+        run: mkdir -p ./acctest/gcp/terraform.d/plugins/terraform.yugabyte.com/platform/yba/0.1.0/linux_amd64
 
       - name: Install
         run: |
-          go build -o ./acctest/gcp/terraform.d/plugins/terraform.yugabyte.com/platform/yugabyte-platform/0.1.0/linux_amd64
+          go build -o ./acctest/gcp/terraform.d/plugins/terraform.yugabyte.com/platform/yba/0.1.0/linux_amd64
 
       # use the modules to bring up platform instance for acceptance tests
       - name: Terraform Init
