[PLAT-9015]Support connection via HTTPS
Summary:
The current provider was able to connect to YBA applications only via http and port 80. With this
change, both HTTPS and HTTP connections would be allowed, with 443 being default port for HTTPS and
80 being default port for HTTP. the `enable_https` field in provider block can be used to switch
between the same. For installation, the application configuration file must have the correct option
enabled.
Subsequent changes can be made to support custom ports.
The current HTTPS connection does not validate TLS certs

Test Plan: Run terraform workflow for both HTTP and HTTPS applications

Reviewers: sneelakantan

Reviewed By: sneelakantan

Subscribers: smuruganandham, rmenon

Differential Revision: https://phorge.dev.yugabyte.com/D25826

--- a/modules/resources/application_settings.conf
+++ b/modules/resources/application_settings.conf
@@ -6,10 +6,10 @@
   "enable_proxy": {},
   "hostname": {},
   "http_enabled": {
-    "value": "1"
+    "value": "0"
   },
   "https_enabled": {
-    "value": "0"
+    "value": "1"
   },
   "no_proxy": {},
   "prometheus_retention": {
@@ -25,7 +25,7 @@
     "value": "/opt/yugabyte"
   },
   "support_origin_url": {
-    "value": "http://localhost:3000"
+    "value": "https://localhost:3000"
   },
   "tls_version": {
     "value": "TLSv1 TLSv1.1 TLSv1.2"
