--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,8 @@ jobs:
     runs-on: self-hosted
     timeout-minutes: 10
     steps:
+    - name: Install zstd 
+      run : sudo apt-get update && sudo apt-get install zstd
 
     - name: Check out code into the Go module directory
       uses: actions/checkout@v3.5.2
