--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
     timeout-minutes: 10
     steps:
     - name: Install zstd 
-      run : sudo apt-get update && sudo apt-get install zstd
+      run : cat /etc/os-release
 
     - name: Check out code into the Go module directory
       uses: actions/checkout@v3.5.2
