--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -86,7 +86,7 @@ jobs:
 
       - name: Add permission to the binary
         run: |
-          chmod +x ./acctest/aws/terraform.d/plugins/terraform.yugabyte.com/platform/yba/0.1.0/linux_amd64/terraform-provider-yba
+          chmod +x ./acctest/azure/terraform.d/plugins/terraform.yugabyte.com/platform/yba/0.1.0/linux_amd64/terraform-provider-yba
 
       # use the modules to bring up platform instance for acceptance tests
       - name: Terraform Init
@@ -240,7 +240,7 @@ jobs:
 
       - name: Add permission to the binary
         run: |
-          chmod +x ./acctest/aws/terraform.d/plugins/terraform.yugabyte.com/platform/yba/0.1.0/linux_amd64/terraform-provider-yba
+          chmod +x ./acctest/gcp/terraform.d/plugins/terraform.yugabyte.com/platform/yba/0.1.0/linux_amd64/terraform-provider-yba
   
       # use the modules to bring up platform instance for acceptance tests
       - name: Terraform Init
