--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -71,6 +71,13 @@ jobs:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v3.5.2
 
+      - name: Set up Go
+        uses: actions/setup-go@v4.0.1
+        with:
+          go-version-file: 'go.mod'
+          cache: false
+        id: go
+
       - uses: hashicorp/setup-terraform@v1
         with:
           terraform_version: ${{ matrix.terraform }}
@@ -147,6 +154,13 @@ jobs:
     steps:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v3.5.2
+
+      - name: Set up Go
+        uses: actions/setup-go@v4.0.1
+        with:
+          go-version-file: 'go.mod'
+          cache: false
+        id: go
       
       - uses: hashicorp/setup-terraform@v1
         with:
@@ -224,6 +238,13 @@ jobs:
     steps:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v3.5.2
+
+      - name: Set up Go
+        uses: actions/setup-go@v4.0.1
+        with:
+          go-version-file: 'go.mod'
+          cache: false
+        id: go
 
       - uses: hashicorp/setup-terraform@v1
         with:
