Use hosted runners

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   build:
     name: Build
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     timeout-minutes: 25
     steps:
     
@@ -38,186 +38,227 @@ jobs:
 
 
 
-  azuretest:
-    name: Acceptance Test on Azure
-    needs: build
-    runs-on: [ self-hosted, azure ]
-    env:
-      TF_VAR_RESOURCES_DIR: ${{ secrets.TF_VAR_RESOURCES_DIR }}
-      YB_CUSTOMER_PASSWORD: ${{ secrets.YB_CUSTOMER_PASSWORD }}
-      AZURE_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-      AZURE_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-      AZURE_RG: ${{ secrets.ARM_RESOURCE_GROUP }}
-      AZURE_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-      AZURE_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-      ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-      ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-      ARM_RG: ${{ secrets.ARM_RESOURCE_GROUP }}
-      ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-      ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-      TF_VAR_AZURE_RG: ${{ vars.TF_VAR_AZURE_RG }}
-      TF_VAR_AZURE_SUBNET_ID: ${{ vars.TF_VAR_AZURE_SUBNET_ID }}
-      TF_VAR_AZURE_VNET_ID: ${{ vars.TF_VAR_AZURE_VNET_ID }}
-      TF_VAR_AZURE_SG_ID: ${{ vars.TF_VAR_AZURE_SG_ID }}
-    timeout-minutes: 120
-    strategy:
-      fail-fast: false
-      matrix:
-        terraform:
-          # add other versions to support
-          - '1.4.*'
+  # azuretest:
+  #   name: Acceptance Test on Azure
+  #   needs: build
+  #   runs-on: [ ubuntu-latest]
+  #   env:
+  #     TF_VAR_RESOURCES_DIR: ${{ secrets.TF_VAR_RESOURCES_DIR }}
+  #     YB_CUSTOMER_PASSWORD: ${{ secrets.YB_CUSTOMER_PASSWORD }}
+  #     AZURE_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+  #     AZURE_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+  #     AZURE_RG: ${{ secrets.ARM_RESOURCE_GROUP }}
+  #     AZURE_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+  #     AZURE_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+  #     ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+  #     ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+  #     ARM_RG: ${{ secrets.ARM_RESOURCE_GROUP }}
+  #     ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+  #     ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+  #     TF_VAR_AZURE_RG: ${{ vars.TF_VAR_AZURE_RG }}
+  #     TF_VAR_AZURE_SUBNET_ID: ${{ vars.TF_VAR_AZURE_SUBNET_ID }}
+  #     TF_VAR_AZURE_VNET_ID: ${{ vars.TF_VAR_AZURE_VNET_ID }}
+  #     TF_VAR_AZURE_SG_ID: ${{ vars.TF_VAR_AZURE_SG_ID }}
+  #   timeout-minutes: 120
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       terraform:
+  #         # add other versions to support
+  #         - '1.4.*'
 
-    steps:
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@v3.5.2
+  #   steps:
+  #     - name: Check out code into the Go module directory
+  #       uses: actions/checkout@v3.5.2
 
-      - name: Set up Go
-        uses: actions/setup-go@v4.0.1
-        with:
-          go-version-file: 'go.mod'
-          cache: false
-        id: go
+  #     - name: Set up Go
+  #       uses: actions/setup-go@v4.0.1
+  #       with:
+  #         go-version-file: 'go.mod'
+  #         cache: false
+  #       id: go
 
-      - uses: hashicorp/setup-terraform@v1
-        with:
-          terraform_version: ${{ matrix.terraform }}
-          terraform_wrapper: false
+  #     - uses: hashicorp/setup-terraform@v1
+  #       with:
+  #         terraform_version: ${{ matrix.terraform }}
+  #         terraform_wrapper: false
 
-      - name: Make YBA Terraform provider installation Directory
-        run: mkdir -p ./acctest/azure/terraform.d/plugins/terraform.yugabyte.com/platform/yba/0.1.0/linux_amd64
+  #     - name: Make YBA Terraform provider installation Directory
+  #       run: mkdir -p ./acctest/azure/terraform.d/plugins/terraform.yugabyte.com/platform/yba/0.1.0/linux_amd64
 
-      - uses: actions/download-artifact@v3
-        with:
-          name: terraform-provider-yba
-          path: ./acctest/azure/terraform.d/plugins/terraform.yugabyte.com/platform/yba/0.1.0/linux_amd64/
+  #     - uses: actions/download-artifact@v3
+  #       with:
+  #         name: terraform-provider-yba
+  #         path: ./acctest/azure/terraform.d/plugins/terraform.yugabyte.com/platform/yba/0.1.0/linux_amd64/
 
-      - name: Add permission to the binary
-        run: |
-          chmod +x ./acctest/azure/terraform.d/plugins/terraform.yugabyte.com/platform/yba/0.1.0/linux_amd64/terraform-provider-yba
+  #     - name: Add permission to the binary
+  #       run: |
+  #         chmod +x ./acctest/azure/terraform.d/plugins/terraform.yugabyte.com/platform/yba/0.1.0/linux_amd64/terraform-provider-yba
 
-      # use the modules to bring up platform instance for acceptance tests
-      - name: Terraform Init
-        run: terraform init
-        working-directory: ./acctest/azure
+  #     # use the modules to bring up platform instance for acceptance tests
+  #     - name: Terraform Init
+  #       run: terraform init
+  #       working-directory: ./acctest/azure
 
-      - name: Terraform Plan
-        run: terraform plan -no-color
-        working-directory: ./acctest/azure
+  #     - name: Terraform Plan
+  #       run: terraform plan -no-color
+  #       working-directory: ./acctest/azure
 
-      - name: Terraform Apply
-        run: terraform apply -auto-approve
-        working-directory: ./acctest/azure
+  #     - name: Terraform Apply
+  #       run: terraform apply -auto-approve
+  #       working-directory: ./acctest/azure
 
-      - name: Set Platform Host
-        run: echo "YB_HOST=$(terraform output --raw host)" >> $GITHUB_ENV
-        working-directory: ./acctest/azure
+  #     - name: Set Platform Host
+  #       run: echo "YB_HOST=$(terraform output --raw host)" >> $GITHUB_ENV
+  #       working-directory: ./acctest/azure
 
-      - name: Set Platform API Key
-        run: echo "YB_API_KEY=$(terraform output --raw api_key)" >> $GITHUB_ENV
-        working-directory: ./acctest/azure
-      # run acceptance tests
-      - name: TF Acceptance Tests
-        timeout-minutes: 120
-        env:
-          TF_ACC: "1"
+  #     - name: Set Platform API Key
+  #       run: echo "YB_API_KEY=$(terraform output --raw api_key)" >> $GITHUB_ENV
+  #       working-directory: ./acctest/azure
+  #     # run acceptance tests
+  #     - name: TF Acceptance Tests
+  #       timeout-minutes: 120
+  #       env:
+  #         TF_ACC: "1"
 
-        run: |
-          go test -v -cover -timeout 2h ./... -run "Azure"
+  #       run: |
+  #         go test -v -cover -timeout 2h ./... -run "Azure"
 
-      # clean up platform instance
-      - name: Terraform Destroy
-        if: always()
-        run: terraform destroy -auto-approve
-        working-directory: ./acctest/azure
+  #     # clean up platform instance
+  #     - name: Terraform Destroy
+  #       if: always()
+  #       run: terraform destroy -auto-approve
+  #       working-directory: ./acctest/azure
 
-  awstest:
-    name: Acceptance Test on AWS
-    needs: build
-    runs-on: [self-hosted, aws]
-    env:
-      TF_VAR_RESOURCES_DIR: ${{ secrets.TF_VAR_RESOURCES_DIR }}
-      YB_CUSTOMER_PASSWORD: ${{ secrets.YB_CUSTOMER_PASSWORD }}
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      TF_VAR_AWS_VPC_ID: ${{ vars.TF_VAR_AWS_VPC_ID }}
-      TF_VAR_AWS_SUBNET_ID: ${{ vars.TF_VAR_AWS_SUBNET_ID }}
-      TF_VAR_AWS_SG_ID: ${{ vars.TF_VAR_AWS_SG_ID }}
-      TF_VAR_AWS_ZONE_SUBNET_ID: ${{ vars.TF_VAR_AWS_ZONE_SUBNET_ID }}
-    timeout-minutes: 120
-    strategy:
-      fail-fast: false
-      matrix:
-        terraform:
-          # add other versions to support
-          - '1.4.*'
+  # awstest:
+  #   name: Acceptance Test on AWS
+  #   needs: build
+  #   runs-on: [ubuntu-latest]
+  #   env:
+  #     TF_VAR_RESOURCES_DIR: ${{ secrets.TF_VAR_RESOURCES_DIR }}
+  #     YB_CUSTOMER_PASSWORD: ${{ secrets.YB_CUSTOMER_PASSWORD }}
+  #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  #     TF_VAR_AWS_VPC_ID: ${{ vars.TF_VAR_AWS_VPC_ID }}
+  #     TF_VAR_AWS_SUBNET_ID: ${{ vars.TF_VAR_AWS_SUBNET_ID }}
+  #     TF_VAR_AWS_SG_ID: ${{ vars.TF_VAR_AWS_SG_ID }}
+  #     TF_VAR_AWS_ZONE_SUBNET_ID: ${{ vars.TF_VAR_AWS_ZONE_SUBNET_ID }}
+  #   timeout-minutes: 120
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       terraform:
+  #         # add other versions to support
+  #         - '1.4.*'
 
-    steps:
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@v3.5.2
+  #   steps:
+  #     - name: Check out code into the Go module directory
+  #       uses: actions/checkout@v3.5.2
 
-      - name: Set up Go
-        uses: actions/setup-go@v4.0.1
-        with:
-          go-version-file: 'go.mod'
-          cache: false
-        id: go
+  #     - name: Set up Go
+  #       uses: actions/setup-go@v4.0.1
+  #       with:
+  #         go-version-file: 'go.mod'
+  #         cache: false
+  #       id: go
       
-      - uses: hashicorp/setup-terraform@v1
-        with:
-          terraform_version: ${{ matrix.terraform }}
-          terraform_wrapper: false
+  #     - uses: hashicorp/setup-terraform@v1
+  #       with:
+  #         terraform_version: ${{ matrix.terraform }}
+  #         terraform_wrapper: false
 
-      - name: Make YBA Terraform provider installation Directory
-        run: mkdir -p ./acctest/aws/terraform.d/plugins/terraform.yugabyte.com/platform/yba/0.1.0/linux_amd64
 
-      - uses: actions/download-artifact@v3
-        with:
-          name: terraform-provider-yba
-          path: ./acctest/aws/terraform.d/plugins/terraform.yugabyte.com/platform/yba/0.1.0/linux_amd64/
+  #     - name: Setup directory
+  #       run: |
+  #         mkdir /home/deeptikumar/yugabyte/.ssh
+  #         mkdir -p ./acctest/aws/terraform.d/plugins/terraform.yugabyte.com/platform/yba/0.1.0/linux_amd64    
+  
+  #     - name: Write acctest key
+  #       uses: timheuer/base64-to-file@v1.2
+  #       with:
+  #         fileName: 'acctest'
+  #         fileDir: '/home/deeptikumar/yugabyte/.ssh/'
+  #         encodedString: ${{ secrets.YBA_SSH_KEY }}
 
-      - name: Add permission to the binary
-        run: |
-          chmod +x ./acctest/aws/terraform.d/plugins/terraform.yugabyte.com/platform/yba/0.1.0/linux_amd64/terraform-provider-yba
+  #     - name: Write acctest pub key
+  #       uses: timheuer/base64-to-file@v1.2
+  #       with:
+  #         fileName: 'acctest.pub'
+  #         fileDir: '/home/deeptikumar/yugabyte/.ssh/'
+  #         encodedString: ${{ secrets.YBA_SSH_KEY_PUB }}
+
+
+  #     - name: Write acctest RLI licenses
+  #       uses: timheuer/base64-to-file@v1.2
+  #       with:
+  #         fileName: 'acctest.rli'
+  #         fileDir: '/home/deeptikumar/yugabyte/'
+  #         encodedString: ${{ secrets.YBA_REPL_RLI }}
+
+  #     - name: Write acctest replicated config
+  #       uses: timheuer/base64-to-file@v1.2
+  #       with:
+  #         fileName: 'replicated.conf'
+  #         fileDir: '/home/deeptikumar/yugabyte/'
+  #         encodedString: ${{ secrets.YBA_REPL_CONF }}
+
+  #     - name: Write acctest replicated config
+  #       uses: timheuer/base64-to-file@v1.2
+  #       with:
+  #         fileName: 'application_settings.conf'
+  #         fileDir: '/home/deeptikumar/yugabyte/'
+  #         encodedString: ${{ secrets.YBA_REPL_APP_SETTINGS }}
+
+  #     - uses: actions/download-artifact@v3
+  #       with:
+  #         name: terraform-provider-yba
+  #         path: ./acctest/aws/terraform.d/plugins/terraform.yugabyte.com/platform/yba/0.1.0/linux_amd64/
+
+  #     - name: Add permission to the binary
+  #       run: |
+  #         chmod +x ./acctest/aws/terraform.d/plugins/terraform.yugabyte.com/platform/yba/0.1.0/linux_amd64/terraform-provider-yba
+  #         chmod 600
+  #         chmod 600 
         
-      # use the modules to bring up platform instance for acceptance tests
-      - name: Terraform Init
-        run: terraform init
-        working-directory: ./acctest/aws
+  #     # use the modules to bring up platform instance for acceptance tests
+  #     - name: Terraform Init
+  #       run: terraform init
+  #       working-directory: ./acctest/aws
 
-      - name: Terraform Plan
-        run: terraform plan -no-color
-        working-directory: ./acctest/aws
+  #     - name: Terraform Plan
+  #       run: terraform plan -no-color
+  #       working-directory: ./acctest/aws
 
-      - name: Terraform Apply
-        run: terraform apply -auto-approve
-        working-directory: ./acctest/aws
+  #     - name: Terraform Apply
+  #       run: terraform apply -auto-approve
+  #       working-directory: ./acctest/aws
 
-      - name: Set Platform Host
-        run: echo "YB_HOST=$(terraform output --raw host)" >> $GITHUB_ENV
-        working-directory: ./acctest/aws
+  #     - name: Set Platform Host
+  #       run: echo "YB_HOST=$(terraform output --raw host)" >> $GITHUB_ENV
+  #       working-directory: ./acctest/aws
 
-      - name: Set Platform API Key
-        run: echo "YB_API_KEY=$(terraform output --raw api_key)" >> $GITHUB_ENV
-        working-directory: ./acctest/aws
-      # run acceptance tests
-      - name: TF Acceptance Tests
-        timeout-minutes: 120
-        env:
-          TF_ACC: "1"
+  #     - name: Set Platform API Key
+  #       run: echo "YB_API_KEY=$(terraform output --raw api_key)" >> $GITHUB_ENV
+  #       working-directory: ./acctest/aws
+  #     # run acceptance tests
+  #     - name: TF Acceptance Tests
+  #       timeout-minutes: 120
+  #       env:
+  #         TF_ACC: "1"
 
-        run: |
-          go test -v -cover -timeout 2h ./... -run "AWS"
+  #       run: |
+  #         go test -v -cover -timeout 2h ./... -run "AWS"
 
-      # clean up platform instance
-      - name: Terraform Destroy
-        if: always()
-        run: terraform destroy -auto-approve
-        working-directory: ./acctest/aws
+  #     # clean up platform instance
+  #     - name: Terraform Destroy
+  #       if: always()
+  #       run: terraform destroy -auto-approve
+  #       working-directory: ./acctest/aws
           
   gcptest:
     name: Acceptance Test on GCP
     needs: build
-    runs-on: [self-hosted, gcp]
+    runs-on: [ubuntu-latest]
     env:
       TF_VAR_RESOURCES_DIR: ${{ secrets.TF_VAR_RESOURCES_DIR }}
       YB_CUSTOMER_PASSWORD: ${{ secrets.YB_CUSTOMER_PASSWORD }}
@@ -251,8 +292,51 @@ jobs:
           terraform_version: ${{ matrix.terraform }}
           terraform_wrapper: false
 
-      - name: Make YBA Terraform provider installation Directory
-        run: mkdir -p ./acctest/gcp/terraform.d/plugins/terraform.yugabyte.com/platform/yba/0.1.0/linux_amd64
+      - name: Setup directory
+        run: |
+          mkdir -p /home/deeptikumar/yugabyte/
+          mkdir -p ./acctest/aws/terraform.d/plugins/terraform.yugabyte.com/platform/yba/0.1.0/linux_amd64    
+
+      - uses: actions/download-artifact@v3
+        with:
+          name: terraform-provider-yba
+          path: ./acctest/gcp/terraform.d/plugins/terraform.yugabyte.com/platform/yba/0.1.0/linux_amd64/
+
+      - name: Write acctest key
+        uses: timheuer/base64-to-file@v1.2
+        with:
+          fileName: 'acctest'
+          fileDir: '/home/deeptikumar/yugabyte/'
+          encodedString: ${{ secrets.YBA_SSH_KEY }}
+
+      - name: Write acctest pub key
+        uses: timheuer/base64-to-file@v1.2
+        with:
+          fileName: 'acctest.pub'
+          fileDir: '/home/deeptikumar/yugabyte/'
+          encodedString: ${{ secrets.YBA_SSH_KEY_PUB }}
+
+
+      - name: Write acctest RLI licenses
+        uses: timheuer/base64-to-file@v1.2
+        with:
+          fileName: 'acctest.rli'
+          fileDir: '/home/deeptikumar/yugabyte/'
+          encodedString: ${{ secrets.YBA_REPL_RLI }}
+
+      - name: Write acctest replicated config
+        uses: timheuer/base64-to-file@v1.2
+        with:
+          fileName: 'replicated.conf'
+          fileDir: '/home/deeptikumar/yugabyte/'
+          encodedString: ${{ secrets.YBA_REPL_CONF }}
+
+      - name: Write acctest replicated config
+        uses: timheuer/base64-to-file@v1.2
+        with:
+          fileName: 'application_settings.conf'
+          fileDir: '/home/deeptikumar/yugabyte/'
+          encodedString: ${{ secrets.YBA_REPL_APP_SETTINGS }}
 
       - uses: actions/download-artifact@v3
         with:
@@ -262,7 +346,7 @@ jobs:
       - name: Add permission to the binary
         run: |
           chmod +x ./acctest/gcp/terraform.d/plugins/terraform.yugabyte.com/platform/yba/0.1.0/linux_amd64/terraform-provider-yba
-  
+
       # use the modules to bring up platform instance for acceptance tests
       - name: Terraform Init
         run: terraform init
